cargo-features = ["edition2021"]
[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Tenn Chio <Tenn_Chio@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
